--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,12 @@ jobs:
       uses: actions/checkout@v3
     
     - name: 🚀 SFTP Deploy
-      uses: Creepios/sftp-action@v1.0.5
+      uses: wlixcc/SFTP-Deploy-Action@v1.2.4
       with:
-        host: ${{ secrets.FTP_SERVER }}
-        port: 5544
         username: ${{ secrets.FTP_USERNAME }}
+        server: ${{ secrets.FTP_SERVER }}
+        port: 5544
         password: ${{ secrets.FTP_PASSWORD }}
-        localPath: './'
-        remotePath: '/public_html/'
+        local_path: './*'
+        remote_path: '/langos.li/public_html'
+        sftp_only: true
