--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,20 @@ jobs:
       uses: actions/checkout@v3
     
     - name: 🚀 SFTP Deploy
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      uses: shimataro/ssh-key-action@v2
       with:
-        server: ${{ secrets.FTP_SERVER }}
-        port: 5544
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./
-        server-dir: /langos.li/public_html/
-        protocol: sftp
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        known_hosts: unnecessary
+        if_key_exists: replace
+        
+    - name: 📤 Upload via SFTP
+      run: |
+        sshpass -p "${{ secrets.FTP_PASSWORD }}" sftp -o StrictHostKeyChecking=no -P 5544 ${{ secrets.FTP_USERNAME }}@${{ secrets.FTP_SERVER }} << 'EOF'
+        cd /langos.li/public_html
+        put -r css
+        put -r js
+        put -r images
+        put -r symbole
+        put index.html
+        put README.md
+        EOF
