--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,15 +13,17 @@ jobs:
     steps:
     - name: 📥 Checkout Code
       uses: actions/checkout@v3
+      
+    - name: 🗑️ Remove .git folder
+      run: rm -rf .git
     
-    - name: 📤 SFTP Deploy
-      uses: pressidium/lftp-mirror-action@v1
+    - name: 🚀 SFTP Deploy
+      uses: wlixcc/SFTP-Deploy-Action@v1.2.4
       with:
-        host: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        server: ${{ secrets.FTP_SERVER }}
         port: 5544
-        user: ${{ secrets.FTP_USERNAME }}
-        pass: ${{ secrets.FTP_PASSWORD }}
-        localDir: './'
-        remoteDir: '/langos.li/public_html/'
-        options: '--exclude ^\.git/'
-        protocol: sftp
+        password: ${{ secrets.FTP_PASSWORD }}
+        local_path: './'
+        remote_path: '/langos.li/public_html/'
+        sftp_only: true
